# recalltrace-openenv

./: .gitattributes  .gitignore  Dockerfile  MENTOR_PREP.md  PITCH.md  PITCH_LANGUAGE.md  README.md  RecallTrace_Colab_Training.ipynb  TRAINING_GUIDE.md  app.py  architecture.html  deploy_to_hf.py  fretfch.json  inference.py  openenv.yaml  pyproject.toml  recover_plots.py  requirements.txt  run_belief_demo.py  run_live_inference.py  run_selfplay.py  server.py  test_env.py  train_trl.py  training_data.json  training_results.json  uv.toml
.agents/skills/hf-cli/: SKILL.md
baseline/: __init__.py  policy.py
checkpoints/: rl_policy.pt
config/: openenv.yaml
docker/: Dockerfile
env/: __init__.py  env.py  models.py
env/__pycache__/: __init__.cpython-312.pyc.1916330045040  env.cpython-312.pyc.1222396024016  env.cpython-312.pyc.1331193048688  env.cpython-312.pyc.3169783387344
grader/: __init__.py  grader.py
inference/: inference.py  policy.py
scenario/: __init__.py  scenario.py
selfplay/: __init__.py  adversary.py  belief_tracker.py  demo_replay.py  investigator.py  rl_model.py  rl_trainer.py  scenario_gen.py  trainer.py  visualization.py
server/: __init__.py  app.py
server/static/: app.js  fretfch.json  index.html  styles.css
tests/: test_env.py
